Fixed title; added styling to display single row on smaller devices; added logic to omit videos

--- a/src/components/Image/Image.scss
+++ b/src/components/Image/Image.scss
@@ -1,8 +1,13 @@
 .image-container {
+  position: relative;
   overflow: hidden;
 
   img {
     max-width: 100%;
     height: auto;
+  }
+
+  .image__title {
+
   }
 }
